--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "plotly (>=6.0.0,<7.0.0)",
     "nbformat (>=5.10.4,<6.0.0)",
-    "geopandas (>=1.0.1,<2.0.0)"
+    "geopandas (>=1.0.1,<2.0.0)",
+    "scikit-learn (>=1.6.1,<2.0.0)"
 ]
 
 [tool.poetry]
