--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "plotly (>=6.0.0,<7.0.0)",
     "nbformat (>=5.10.4,<6.0.0)",
     "geopandas (>=1.0.1,<2.0.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)"
+    "scikit-learn (>=1.6.1,<2.0.0)",
+    "xgboost (>=3.0.0,<4.0.0)"
 ]
 
 [tool.poetry]
