--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "nbformat (>=5.10.4,<6.0.0)",
     "geopandas (>=1.0.1,<2.0.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
-    "xgboost (>=3.0.0,<4.0.0)"
+    "xgboost (>=3.0.0,<4.0.0)",
+    "optuna (>=4.3.0,<5.0.0)",
+    "lightgbm (>=4.6.0,<5.0.0)"
 ]
 
 [tool.poetry]
